deploy/base/control-plane-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: control-plane
spec:
  selector:
    app.kubernetes.io/name: control-plane
  ports:
    - name: grpc
      port: 8080
      targetPort: grpc
