deploy/base/worker-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-gateway
spec:
  selector:
    app.kubernetes.io/name: worker-gateway
  ports:
    - name: grpc
      port: 8080
      targetPort: grpc
